guestweb/common_css/public_ny_v2/theme.less
/*------------------------------- Themes ----------------------------------------------------*/

@import "../style.less";
html,
body {
    height: auto;
    min-height: 100%;
}

body {
    background-color: #FFF;
    font-family: "Gotham Book";
}

.back-text {
    display:none;
}

.main-text,
.btn {
    font-family: "Gotham Book";
    text-transform: uppercase;
    font-weight: bolder;
}

.strong-font {
    font-family: "Gotham Book";
}
.main-text{
    font-weight: 500;
    line-height: 1em;
}
.main-text,
.sub-main-text,
.sub-text,
.res-details-heading,
.res-date{
    text-align:left;
}

a,
a:hover,
.main-text,
.res-date,
.footer-sub-text,
.footer-sub-text:hover,
.phone-label {
    color: #363d40;
    text-decoration:none;
}

.sub-main-text {
    color: #363d40;
    text-transform: uppercase !important;
}

.header-bar {
    background: #fff;
}

.logo-image {
    max-width: 100%;
    margin: 0%;
    margin-bottom:15px;
}

.template-text,
.footer-text,
.balance-amount,
.phone-text,
.phone-text:hover,
.request-text,
.error-text {
    color: #363d40;
}

.view-bill {
    color: #363d40;
}

.sub-text {
    font-family: "Gotham Book"
}

.sub-text,
.sub-text:hover,
.query-text,
.query-text:hover,
.light-text {
    color: #363d40;
}

.btn,
.btn:hover {
    background: #fff;
    color: #000;
    border: 1px solid black !important;
    box-shadow: none !important;
    max-width: 100% !important;
}

.calendar-button {
    background-position: 96% 13px !important;
}

.input-field {
    border: 1px solid black !important;
    background-color: #fff !important;
    box-shadow: none !important;
    max-width: 100% !important;
}

.section-container {
        max-width: 100% !important;
    }

.select-style, text-comment {
    border: 1px solid black !important;
}

.dual-button {
    font-size: 22px;
    font-weight: 900;
}

.btn-template {
    font-size: 22px;
    min-height: initial !important;
}

.dark-button,
.dark-button:hover {
    background: #fff;
}

.light-button,
.light-button:hover {
    background: #fff;
}

.checkouttime1,
.checkouttime1:hover {
    background: #fff;
}

.checkouttime2,
.checkouttime2:hover {
    background: #fff;
}

.checkouttime3,
.checkouttime3:hover {
    background: #fff;
}

.checkout-icon{
  background-image: url('/assets/guestweb/common_images/checkout-now-black.png') !important;
}
.late-checkout-icon{
  background-image: url('/assets/guestweb/common_images/late-checkout-black.png') !important;
}

.no-thanks,
.no-thanks:hover {
    color: fff;
    text-decoration: underline;
    text-transform: none;
}

.strong-font {
    font-weight: 500;
}

// .amount,
// .time {
//     font-size: 30px;
//     line-height: 1.2;
// }
.down-arrow-button {
    background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
}

.right-arrow-button {
    background-image: url('/assets/guestweb/common_images/black/right_arrow.png');
}

.upgrade-details .upgrades-btn {
    background: #000;
}

.proceed-to-checkin {
    background: #fff !important;
    color: #000 !important;
    border-radius: 0px !important;
    border: 1px solid black !important;
    text-align: center !important;
}

.upgrades-label {
    color: #BA7A55;
}

.circle-bg {
    line-height: 1;
}


/*----------------- date picker -------------------------*/

.pickadate-cell,
.for,
.amount {
    font-family: "Gotham Book"
}

.pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
    color: #000;
    color: transparent;
}

.pickadate-cell .pickadate-enabled,
.pickadate-centered-heading {
    color: #000;
}

.pickadate-cell .pickadate-active {
    background-color: #000 !important;
    color: #fff;
}

.pickadate-head {
    color: #000000;
}

.calendar-selection {
    color: #fff;
}

.pickadate-cell li:nth-child(1),
.pickadate-cell li:nth-child(8),
.pickadate-cell li:nth-child(15),
.pickadate-cell li:nth-child(22),
.pickadate-cell li:nth-child(29),
.pickadate-cell li:nth-child(36) {
    border-left: 1px solid #fff;
}

.pickadate-cell .pickadate-disabled,
.pickadate-cell .pickadate-enabled,
.pickadate-cell .pickadate-outofrange-disabled {
    background-color: #EEEBE8;
}

.pickadate-cell .pickadate-disabled,
.pickadate-cell .pickadate-disabled a {
    color: #ac9557;
}

.pickadate-cell li {
    border: 1px solid #FFF;
}

.pickadate a:visited,
.pickadate a {
    color: #666666;
}

.date-picker-header {
    background-color: #000;
}

.calendar-back {
    background-image: url('/assets/guestweb/common_images/back_icon.png');
}

.calendar-done {
    background-image: url('/assets/guestweb/common_images/done_white.png');
}

.pickadate-prev,
.pickadate-next,
.pickadate-prev:hover,
.pickadate-next:hover {
    color: #000;
}

.date-picker-wrap {
    background-color: #fff;
}

.date-picker-bg {
    background: rgba(238, 238, 238, 0.58);
}

.horizontal-line-sep-mobile {
    border-top: 1px solid #9b9b9b;
}

.departure-date {
    color: #fff;
}

.date-text {
    color: #fff;
}

.logo-image {
    max-width: unset;
}

.res-details-heading,
.res-details-heading:hover {
    color: #000;
}

.back-to-checkout {
    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
    height: 40px;
}

.row {
    margin-bottom: 21px;
}

.circle-bg {
    background: none;
    background: url("/assets/guestweb/common_images/black/circle-bg.png") no-repeat scroll center top transparent !important;
}

.time {
    font-size: 20px;
    padding-top: 25px;
    display: block;
}

.late-charge br {
    display: none;
}

.for {
    font-size: 16px;
    margin-right: 7px;
}

.ap {
    font-size: 30px;
}

.amount {
    font-size: 28px;
}

.triple-button,
.dual-button {
    border-right: 1px inset #6A6A6A;
}

.circle-bg {
    height: 124px;
    padding-top: 0px;
}

@media (max-width: 480px) {
    .logo-image {
        max-width: 285px !important;
    }
    .main-text {
        font-size: 34px;
    }
    .container {
        width: 100%;
    }
    .sub-main-text {
        font-size: 17px;
    }
    .footer-text {
        font-size: 5.3vw;
    }
    .logo-image {
        max-width: 200px;
        margin: 0% auto;
    }
    .dual-button {
        font-size: 23px;
    }
    .section-container {
        padding-bottom: 0px;
    }
    .checkout-alone-button {
        margin-left: 95px !important;
    }
    .amount {
        font-size: 21px;
    }
    .accept-charges {
        padding: 5% 10%;
        width: 100%;
    }
}

@media (max-width: 890px) {
    .btn-template {
        padding: 4%;
    }
    .checkout-alone-button {
        margin-left: 95px !important;
    }
}

@media (min-width: 890px) {
    .back_check {
        font-size: 17px;
        padding-top: 17px;
    }
}

@media (min-width: 990px) {
    .main-text {
        font-size: 30px;
    }
    .sub-main-text {
        font-size:16px !important;
    }
    .sub-text {
        font-size: 15px !important;
    }
    .query-text {
        font-size: 11px;
    }
    .checkout-alone-button {
        margin-left: 126px;
    }
    .checkout-btn {
        padding: 25% 2% !important;
    }
    .logo-image {
        margin-bottom:20px;
    }
}

@media (max-width: 990px) {
    .logo-image {
        margin: 0px;
        margin-bottom:15px;
        // max-width: 295px;
    }
    .back-to-checkout {
        display: none;
    }
    .btn-template,
    .dual-button {
        font-size: 20px;
    }
    .main-text {
        font-size: 28px;
    }
    .checkout-alone-button {
        float: left;
        margin-left: 19px;
    }
    .sub-main-text {
        font-size: 19px;
    }
    .checkout-btn {
        padding: 10% 8%;
    }
}

